--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,12 @@ dependencies:
   intl: ^0.17.0
   fluttertoast: ^8.1.1
   flutter_cached_pdfview: ^0.4.1
+  graphview: ^1.1.1
+  progress_indicator_button: ^0.0.3
+  youtube_player_iframe: ^4.0.1
+  youtube: ^1.0.1
+  flutter_launcher_icons: ^0.11.0
+  readmore: ^2.2.0
 
 
 dev_dependencies:
@@ -83,8 +89,8 @@ dev_dependencies:
 flutter_native_splash:
   color: '#FFA500'
   color_dark: '#272727'
-  image: assets/images/offers/logo.png
-  image_dark: assets/images/offers/logo.png
+  image: assets/images/offers/logoCenter.png
+  image_dark: assets/images/offers/logoCenter.png
 
 # The following section is specific to Flutter.
 flutter:
@@ -98,7 +104,6 @@ flutter:
   assets:
     - assets/images/icons8-logout-50.png
     - assets/images/
-    - assets/images/pictures/mur.jpg
     - assets/images/pictures/open-book-icon-16367.png
     - assets/images/pictures/
     - assets/images/pictures/social-icons/
