--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   youtube: ^1.0.1
   flutter_launcher_icons: ^0.11.0
   readmore: ^2.2.0
+  youtube_player_flutter: ^8.1.2
 
 
 dev_dependencies:
