--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,9 @@ dependencies:
   readmore: ^2.2.0
   youtube_player_flutter: ^8.1.2
   splashscreen: ^1.2.0
+  cloudinary_flutter: ^0.0.4
+  cloudinary_dart: ^0.0.7
+  connectivity_plus: ^2.1.0
 
 
 dev_dependencies:
