--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.santmatsatsang.satsangapp">
    <application
-        android:label="satsangapp"
+        android:label="Santmat App"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
