--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ dependencies:
   flutter_toastr: ^1.0.3
   path_provider: ^2.0.12
   carousel_slider: ^4.2.1
+  flutter_treeview: ^1.0.7+1
 
 
 dev_dependencies:
