--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.4+5
+version: 1.0.5+6
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -87,6 +87,7 @@ dependencies:
   flutter_pdfview: ^1.2.5
   http: ^0.13.5
   path: ^1.8.2
+  flutter_html: ^3.0.0-alpha.6
 
 
 dev_dependencies:
